# burp-frame

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  burp-frame.bat  burp-frame.sh  pyproject.toml  test.js
burp-frame/: .readthedocs.yaml  README.md  burpDrop.sh  pyproject.toml
burp-frame/docs/: conf.py
burp-frame/scripts/: cli.py  universal_bypass_manager.py  utils.py
burp-frame/scripts/modules/: __init__.py
burp_frame/: __init__.py  cert_manager.py  cli.py  cli1.py  config.json  config.py  device_manager.py  frida_manager.py  logger.py  proxy_manager.py  utils.py
burp_frame/data/frida_scripts/bypass/: universal_bypass.js
burp_frame/modules/: frida_cert_repin_bypass.py  universal_bypass_manager.py
burp_frame/modules/bypass/: bypass_auto_manager.py
burp_frame/modules/bypass/scripts/: template_bypass.js
burp_frame/modules/detection/: universal_detector.py
burp_frame/modules/detection/scripts/: universal_detector.js
burpdrop/: README.md  burpDrop.bat  pyproject.toml  setup.py
burpdrop/burpdrop.egg-info/: PKG-INFO
burpdrop/scripts/: adb_client.py  bypass_ssl.py  bypass_ssl_manager.py  cert_handler.py  cert_manager.py  cli.py  config.json  config.py  device_manager.py  logger.py  main.py  utils.py
burpdrop/scripts/data/frida_scripts/bypass/: enhanced_ssl_root_bypass.js
burpdrop/scripts/modules/: universal_bypass_manager.py
burpdrop/scripts/tests/: test_utils.sh
burpdrop_tool/: burpDrop.bat  burpDrop.sh  pyproject.toml  setup.py
burpdrop_tool/scripts/: adb_client.py  config.py  logger.py  main.py
docs/: conf.py  index.rst  modules.rst  requirements.txt
scripts/: README.md  __init__.py  adb_client.py  burpDrop.bat  burpDrop.py  burpDrop.sh  cert_handler.py  config.json  config.py  device_manager.py  logger.py  main.py  setup.py
scripts/burpdrop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/modules/: frida_cert_repin_bypass.py  universal_bypass_manager.py
scripts/utils/: adb_utils.sh  cert_utils.sh  dependencies.sh  logger.sh  update_checker.sh
